# nexu-protocol

./: .gitignore  LICENSE  README.md
nexu-core/: Cargo.toml
nexu-core/include/: nexu_core.h
nexu-core/src/: ffi.rs  lib.rs  stitch.rs
scripts/: release_v2_3.sh
sdk/go/: go.mod  main.go
